clusters/cluster0/kubernetes/apps/media/emby/app/emby-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: emby-service
  namespace: media
spec:
  selector:
    app: emby
#  externalTrafficPolicy: Local
  ports:
    - name: emby
      protocol: TCP
      port: 8096
      targetPort: 8096
    #  nodePort: 30096
#  type: NodePort
