clusters/cluster0/kubernetes/apps/media/emby/app/emby-external-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: emby
  namespace: media
  annotations:
    external-dns.alpha.kubernetes.io/hostname: emby.biggs.dog
spec:
  ingressClassName: nginx
  rules:
  - host: emby.biggs.dog
    http:
      paths:
      - path: /
        pathType: Prefix
        backend: 
          service:
            name: emby-service
            port:
              number: 8096
  tls:
  - hosts:
    - emby.biggs.dog
    secretName: biggs-dog-tls
